# DodonaCLI

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  completion_script.sh  courses.py  custom_HTML_printer.py  dodonacli_completion_script.sh  get_data.py  handle_flags.py  install.sh  main.py  pretty_console.py  pretty_print.py  pyproject.toml  requirements.txt  set_data.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: prevent_outside_pr_master.yml  publish.yml  publish_test.yml  set_version.yml
commands/: display.py  post.py  select.py  status.py  submission.py  tutorial.py  up.py
dodonacli/: main.py
dodonacli/commands/: cli_next.py  display.py  info.py  post.py  select.py  settings.py  status.py  submission.py  tutorial.py  up.py
dodonacli/source/: check_for_update.py  get_data.py  interactive_tutorial.py  menu.py  pretty_console.py  pretty_print.py  pretty_printer.py  set_data.py  submission_data_handler.py  syntax_checker.py
man-page/: dodonacli.1
source/: get_data.py  handle_flags.py  interactive_tutorial.py  pretty_console.py  pretty_print.py  set_data.py  tutorial.py
