[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DodonaCLI"
version = "2024.01.10"
authors = [
    { name = "Bram Windey", email = "windey.bram@gmail.com" },
]
description = "A CLI tool for Dodona"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich",
    "markdownify",
    "bs4",
    "click",
    "click-default-group",
    "update-notipy",
    "tomli"
]
keywords = ["dodona", "cli"]


[project.scripts]
dodona = "dodonacli.main:main"

[project.urls]
Homepage = "https://github.com/BWindey/DodonaCLI"
